kustomize/vote/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vote
  name: vote
spec:
  ports:
  - name: 80-80
    nodePort: 30300
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
  type: NodePort
