kustomize/vote/base/ingress2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flagger-prom
  namespace: instavote
  labels:
    app: fprometheus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: flagger-prometheus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
